hphp/hack/test/typecheck/abstract_redeclare_constructor.php.exp
File "abstract_redeclare_constructor.php", line 8, characters 28-38:
Cannot re-declare this method as abstract (Typing[4142])
File "abstract_redeclare_constructor.php", line 4, characters 19-29:
Previously defined here
